<resources>
    <string name="app_name">phone</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="you_re_logged_in_as">you\'re logged in as</string>
    <string name="phone_number">Phone Verification</string>
    <string name="logout">logout</string>
    <string name="we_will_send_you_an_one_time_password_on_your_phone_number">We will send you an <b>One Time Password</b>\n on your phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="phone_number1">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="address">Address</string>
    <string name="zipcode">Zipcode</string>
    <string name="checkbox">I agree to Chasy Product\'s <b>Terms and Conditions and Privacy Policy.</b></string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="you_will_get_an_otp_via_sms">You will get an OTP via SMS</string>
    <string name="welcome_to_chasy_products">Welcome To Chasy Products</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="add">Add</string>
    <string name="browse">Browse</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="get_otp">Get OTP</string>

    <string-array name="avail">
        <item>Available</item>
        <item>Not Available</item>
    </string-array>

    <string-array name="notavail">
        <item>Not Available</item>
        <item>Available</item>
    </string-array>

</resources>