<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context=".ProductsActivity">


    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="Name"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="Price"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="Price"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="Price"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/reddish"
        >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/status"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>