<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/reddish"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        android:fontFamily="@font/script_mt"
        android:textColor="@color/white"
        android:text="@string/welcome_to_chasy_products" />

    <!--<com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/tilEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">-->

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints="email"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@xml/selector"
        android:backgroundTint="@color/white"
        android:inputType="textPersonName"
        android:textSize="16sp"
        tools:ignore="TextFields" />

    <!--</com.google.android.material.textfield.TextInputLayout>-->

    <!--<com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">-->

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:textColorHint="@xml/selector"
        android:backgroundTint="@color/white"
        android:autofillHints="password"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="textPassword"
        />

    <!--</com.google.android.material.textfield.TextInputLayout>-->

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textAlignment="textEnd"
        android:layout_gravity="center"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/Btn_SignIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:onClick="login"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        tools:ignore="UsingOnClickInXml"
        android:textAllCaps="false"
        android:foreground="?attr/selectableItemBackgroundBorderless" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:layout_gravity="center"
        tools:ignore="RtlCompat"
        />


    <Button
        android:id="@+id/Btn_MainRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:background="@drawable/custom_button"
        android:onClick="register"
        tools:ignore="UsingOnClickInXml"
        android:textAllCaps="false"
        android:foreground="?attr/selectableItemBackgroundBorderless"/>

</LinearLayout>