<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ProductsActivity">

    <ImageView
        android:id="@+id/imgEdit"
        android:layout_width="196dp"
        android:layout_height="172dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher_foreground"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        >

        <EditText
            android:id="@+id/etNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            tools:ignore="TextFields"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/price"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        >

        <EditText
            android:id="@+id/etPriceEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:textSize="14sp"
            android:inputType="number"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/category"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        >

        <EditText
            android:id="@+id/etCategoryEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:textSize="14sp"
            android:inputType="number"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        >
        <EditText
            android:id="@+id/etDescriptionEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:textSize="14sp"
            android:inputType="text"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:id="@+id/actvStatusEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:hint="@string/status"
            android:text=""
            android:textSize="14sp"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnbrowseEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/reddish"
            android:text="@string/browse"
            tools:ignore="RelativeOverlap,UnusedAttribute" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/reddish"
            android:text="Edit"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>