<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <!--Edittext for getting users phone number-->
    <LinearLayout
        android:id="@+id/idLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_phone_android_24"
            android:contentDescription="@string/app_name" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="#000"/>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/we_will_send_you_an_one_time_password_on_your_phone_number"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="#777777"/>


        <EditText
            android:id="@+id/idEdtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="Enter Phone Number"
            android:textSize="14sp"
            android:textAlignment="center"
            android:importantForAutofill="no"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="phone"/>

        <!--Button for getting OTP-->
        <Button
            android:id="@+id/idBtnGetOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/idEdtPhoneNumber"
            android:text="Get OTP"
            android:backgroundTint="#DA0000"
            android:textAllCaps="false" />
    </LinearLayout>

    <!--Edittext for getting otp from user-->
    <LinearLayout
        android:id="@+id/idLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:id="@+id/idEdtOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idBtnGetOtp"
        android:layout_margin="10dp"
        android:hint="Enter OTP"
        android:importantForAutofill="no"
        android:inputType="phone" />

    <!--button for verifying user OTP-->
    <Button
        android:id="@+id/idBtnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEdtOtp"
        android:layout_margin="10dp"
        android:text="Verify OTP"
        android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>